--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,23 @@
 			"justMyCode": true
 		},
 		{
-			"name": "Python: Launch Server",
+			"name": "Python: Launch Server 2021E",
+			"type": "python",
+			"request": "launch",
+			"program": "${workspaceFolder}/Source/_main.py",
+			"cwd": "${workspaceFolder}",
+			"args": [
+				"-v",
+				"2021E",
+				"server",
+				"-p",
+				"C:\\Users\\USERNAME\\Documents\\Baseplate.rbxl"
+			],
+			"console": "integratedTerminal",
+			"justMyCode": true
+		},
+		{
+			"name": "Python: Launch Server 2018M",
 			"type": "python",
 			"request": "launch",
 			"program": "${workspaceFolder}/Source/_main.py",
@@ -27,7 +43,7 @@
 			],
 			"console": "integratedTerminal",
 			"justMyCode": true
-		}
+		},
 		{
 			"name": "Python: Launch Local Client",
 			"type": "python",
@@ -36,7 +52,7 @@
 			"cwd": "${workspaceFolder}",
 			"args": [
 				"-v",
-				"2018M",
+				"2021E",
 				"client",
 				"-wh",
 				"localhost"
