--- a/OldLauncher/2017Launcher/2017Launcher.csproj
+++ b/OldLauncher/2017Launcher/2017Launcher.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{102A6329-71A2-4E25-93C3-6C6380E903E4}</ProjectGuid>
+    <ProjectGuid>{265A3EAC-1199-4853-8A8A-00D9C5614F46}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>2017Launcher</RootNamespace>
     <AssemblyName>2017Launcher</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <StartupObject>_2017Launcher.Program</StartupObject>
@@ -33,16 +33,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameServer\Rcc\Classes\LuaValue.cs" />
+    <Compile Include="GameServer\Rcc\Classes\RCCGameServer.cs" />
+    <Compile Include="GameServer\Rcc\Classes\RCCService.cs" />
+    <Compile Include="GameServer\Rcc\Classes\Script.cs" />
+    <Compile Include="GameServer\Rcc\Job.cs" />
+    <Compile Include="GameServer\Rcc\LuaType.cs" />
+    <Compile Include="GameServer\SOAP2.cs" />
+    <Compile Include="GameServer\Utility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="soapframework\SOAP.cs" />
+    <Compile Include="SoapUI\Rcc\Classes\JSONArgument.cs" />
+    <Compile Include="SoapUI\Rcc\Classes\LuaValueNew.cs" />
+    <Compile Include="SoapUI\XmlResponses\Status.cs" />
     <Compile Include="_2017Launcher\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
