--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -6,7 +6,7 @@ instances.count = 1
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E", etc.
 roblox_version = '2021E'
-place_path = 'C:\Users\USERNAME\Documents\Baseplate.rbxl'
+place_path = 'C:\Users\USERNAME\Documents\Atlanta-hotels-FULLSCRIPTED.rbxl'
 icon_path = 'C:\Users\USERNAME\Pictures\Roblox\RobloxScreenShot20230701_095145128.png'
 
 [server_core]
@@ -19,7 +19,8 @@ def RESULT(tick: float) -> str:
 
 retrieve_username = '''
 def RESULT(user_code: str) -> str:
-    return user_code
+    import datetime
+    return datetime.datetime.fromtimestamp(float(user_code[5:])).strftime('%H:%M:%S')
 '''
 
 retrieve_user_id = '''
