--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,22 @@
 			"justMyCode": true
 		},
 		{
+			"name": "Python: Launch Client from IPv4 Address",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "${workspaceFolder}/Source/_main.py",
+			"cwd": "${workspaceFolder}",
+			"args": [
+				"player",
+				"-wh",
+				"127.0.0.1",
+				"-rh",
+				"127.0.0.1"
+			],
+			"console": "integratedTerminal",
+			"justMyCode": true
+		},
+		{
 			"name": "Python: Launch Client from IPv6 Address",
 			"type": "debugpy",
 			"request": "launch",
@@ -52,9 +68,9 @@
 			"args": [
 				"player",
 				"-wh",
-				"[2603:8000:1:3a97::18ce]",
+				"::1",
 				"-rh",
-				"[2603:8000:1:3a97::18ce]"
+				"::1"
 			],
 			"console": "integratedTerminal",
 			"justMyCode": true
