--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -7,7 +7,7 @@ instances.count = 1
 # Aliases for "v348" is "2018M", "v463" is "2021E", etc.
 roblox_version = '2021E'
 # roblox_version = '2018M'
-place_path = 'C:\Users\USERNAME\Documents\Roblox Files\Unraavel.rbxl'
+place_path = 'C:\Users\USERNAME\Documents\Roblox Files\Town of Rōblox.rbxl'
 icon_path = 'C:\Users\USERNAME\Pictures\097050bd37142a4080975bb8e415d2b8.jpg'
 name = '666'
 description = ''
