--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -10,14 +10,16 @@ instances.count = 1
 # Aliases for "v348" is "2018M", "v463" is "2021E", etc.
 # roblox_version = '2021E'
 roblox_version = '2018M'
-place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Roblox Hacked Place Database 2 - MrManchot\1dev2\Welcome to the Town of Robloxia.rbxl'
+place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Roblox Hacked Place Database 2 - MrManchot\Build and Race.rbxl'
 icon_path = 'C:\Users\USERNAME\Pictures\097050bd37142a4080975bb8e415d2b8.jpg'
 name = '666'
 description = ''
 creator.name = 'ÒÓ'
 
+
 [server_core]
 chat_style = 'ClassicAndBubble'
+avatar_type = 'R6'
 
 # Python function `RESULT` which generates an RFD-specific user code if one isn't provided.
 # Server maintainers should review the code because it's used by 'eval'.
@@ -30,15 +32,14 @@ def RESULT(tick: float) -> str:
 # Server maintainers should review the code because it's used by 'eval'.
 retrieve_username = '''
 def RESULT(user_code: str) -> str:
-    import datetime
-    return datetime.datetime.fromtimestamp(float(user_code[5:])).strftime('%H:%M:%S')
+    return user_code
 '''
 
 # Python function `RESULT` which evaluates the player's `UserId` value from their RFD-specific user code.
 # Server maintainers should review the code because it's used by 'eval'.
 retrieve_user_id = '''
 def RESULT(user_code: str) -> int:
-    return int(float(user_code[5:]) % 1e3)
+    return hash(user_code)%1024
 '''
 
 # Python function `RESULT` which evaluates the player's `AccountAge` value from their RFD-specific user code.
@@ -52,5 +53,7 @@ def RESULT(user_code: str) -> int:
 # Server maintainers should review the code because it's used by 'eval'.
 filter_text = '''
 def RESULT(user_code: str, text: str) -> str:
-    return f'"{text.upper()}" (user {user_code} said that by the way).'
+    return text
+      .replace('oo','òó')
+      .replace('OO','ÒÓ')
 '''
