--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -10,8 +10,8 @@ instances.count = 1
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E", etc.
 roblox_version = '2018M'
-place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Roblox Hacked Place Database 2 - MrManchot\OriginatedSystemized\Middle Ocean.rbxl'
-icon_path = 'C:\Users\USERNAME\Pictures\097050bd37142a4080975bb8e415d2b8.jpg'
+place_path = 'C:\Users\USERNAME\Documents\Roblox Files\Example.rbxl'
+icon_path = 'C:\Users\USERNAME\Pictures\Example.jpg'
 name = '666'
 description = ''
 creator.name = 'ÒÓ'
