--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -10,7 +10,7 @@ instances.count = 1
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E", etc.
 roblox_version = '2018M'
-place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Roblox Hacked Place Database 2 - MrManchot\OriginatedSystemized\Middle Ocean.rbxl'
+place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Baseplate.rbxl'
 icon_path = 'C:\Users\USERNAME\Pictures\097050bd37142a4080975bb8e415d2b8.jpg'
 name = '666'
 description = ''
@@ -24,34 +24,39 @@ avatar_type = 'R15'
 # Python function `RESULT` which generates an RFD-specific user code if one isn't provided.
 # Server maintainers should review the code because it's used by 'eval'.
 retrieve_default_user_code = '''
-def RESULT(tick: float) -> str:
-    return f'Tick {tick}'
+function(tick) -- float -> str:
+    return string.format('Tick %d', tick)
+end
 '''
 
 # Python function `RESULT` which evaluates the player's `Name` value from their RFD-specific user code.
 # Server maintainers should review the code because it's used by 'eval'.
 retrieve_username = '''
-def RESULT(user_code: str) -> str:
+function(user_code) -- str -> str:
     return user_code
+end
 '''
 
 # Python function `RESULT` which evaluates the player's `UserId` value from their RFD-specific user code.
 # Server maintainers should review the code because it's used by 'eval'.
 retrieve_user_id = '''
-def RESULT(user_code: str) -> int:
-    return hash(user_code)%1024
+function(user_code) -- str -> int:
+    return math.random(1, 16777216)
+end
 '''
 
 # Python function `RESULT` which evaluates the player's `AccountAge` value from their RFD-specific user code.
 # Server maintainers should review the code because it's used by 'eval'.
 retrieve_account_age = '''
-def RESULT(user_code: str) -> int:
+function(user_code) -- str -> int
     return 6969
+end
 '''
 
 # Python function `RESULT` which filters text.
 # Server maintainers should review the code because it's used by 'eval'.
 filter_text = '''
-def RESULT(user_code: str, text: str) -> str:
-    return text.replace('oo','òó').replace('OO','ÒÓ').replace('ee','èé').replace('EE','ÈÉ').replace('Roblox','Rōblox').replace('ROBLOX','RŌBLOX')
+function(user_code, text)
+    return text:gsub('oo','òó'):gsub('OO','ÒÓ'):gsub('ee','èé'):gsub('EE','ÈÉ'):gsub('Roblox','Rōblox'):gsub('ROBLOX','RŌBLOX')
+end
 '''
