--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,6 @@
 	"robloxLsp.diagnostics.workspaceDelay": -1,
 	"python.analysis.autoSearchPaths": false,
 	"python.analysis.include": [
-		"${workspaceFolder}/Source",
+		"./Source",
 	],
-	"python.linting.enabled": false,
 }
