--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -10,7 +10,7 @@ instances.count = 1
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E", etc.
 roblox_version = '2018M'
-place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Baseplate.rbxl'
+place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Greenwater.rbxl'
 icon_path = 'C:\Users\USERNAME\Pictures\Byfron Icon.png'
 name = '666'
 description = ''
