--- a/WineBootstrapper/GameConfig.toml
+++ b/WineBootstrapper/GameConfig.toml
@@ -1,3 +1,4 @@
+#This config is older some features might not work
 # EXAMPLE GAME CONFIGURATION FILE.
 # PLEASE REVIEW AND MODIFY IF YOU WISH TO RUN YOUR OWN SERVERS!
 
