--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -9,8 +9,8 @@ instances.count = 1
 
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E".
-roblox_version = '2021E'
-place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Baseplate.rbxl'
+roblox_version = '2018M'
+place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Hotelistic.rbxl'
 # Stretches to 16:9.
 icon_path = 'C:\Users\USERNAME\Pictures\Byfron Icon.png'
 name = '666'
@@ -45,7 +45,7 @@ function(user_code) -- str -> [str]
         9482991343,
         9481782649,
         9120251003,
-        6445262286,
+        4381817635,
         6969309778,
         5731052645,
         2846257298,
@@ -63,21 +63,28 @@ function(user_code) -- str -> [str]
 end
 '''
 
-retrieve_body_colors = '''
-function(user_code) -- str -> [str]
-    return {}
+retrieve_avatar_colors = '''
+function(user_code) -- str -> {[str]: number}
+    return {
+        head = 1013,
+        left_arm = 1013,
+        left_leg = 1013,
+        right_arm = 1013,
+        right_leg = 1013,
+        torso = 1013,
+    }
 end
 '''
 
 retrieve_avatar_scales = '''
-function(user_code) -- str -> [str]
+function(user_code) -- str -> {[str]: number}
     return {
-        Height = 0.5,
-        Width = 0.5,
-        Head = 1.5,
-        Depth = 0.5,
-        Proportion = 1,
-        BodyType = 0,
+        height = 1,
+        width = 0.8,
+        head = 1,
+        depth = 0.8,
+        proportion = 0,
+        body_type = 0,
     }
 end
 '''
