--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -11,6 +11,8 @@ instances.count = 1
 # Aliases for "v348" is "2018M", "v463" is "2021E".
 roblox_version = '2018M'
 place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Hotelistic.rbxl'
+database_path = '_.sqlite'
+erase_database_on_start = true
 # Stretches to 16:9.
 icon_path = 'C:\Users\USERNAME\Pictures\Byfron Icon.png'
 name = '666'
