--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -12,7 +12,7 @@ instances.count = 1
 roblox_version = '2018M'
 place_path = 'c:\Users\USERNAME\Documents\Roblox Files\Hotelistic.rbxl'
 database_path = '_.sqlite'
-erase_database_on_start = true
+erase_database_on_start = false
 # Stretches to 16:9.
 icon_path = 'C:\Users\USERNAME\Pictures\Byfron Icon.png'
 name = '666'
