--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -14,6 +14,7 @@ roblox_version = '2018M'
 title = '666'
 description = ''
 creator.name = 'ÒÓ'
+startup_script = 'game.workspace.FilteringEnabled = true'
 
 [game_setup.place]
 path = 'c:\Users\USERNAME\Documents\Roblox Files\LumberTycoon2_2018M.rbxl'
