--- a/WineBootstrapper/GameConfig.toml
+++ b/WineBootstrapper/GameConfig.toml
@@ -1,6 +1,6 @@
-#This config is older some features might not work
 # EXAMPLE GAME CONFIGURATION FILE.
 # PLEASE REVIEW AND MODIFY IF YOU WISH TO RUN YOUR OWN SERVERS!
+# Some arguments are provided as absolute paths and only work on my machine.
 
 [server_assignment]
 players.maximum = 4096
@@ -8,55 +8,103 @@ players.preferred = 666
 instances.count = 1
 
 [game_setup]
-# Aliases for "v348" is "2018M", "v463" is "2021E", etc.
-roblox_version = '2021E'
-place_path = 'c:\robloxmaps\2007Crossroads.rbxl'
-icon_path = 'C:\Users\USERNAME\Pictures\097050bd37142a4080975bb8e415d2b8.jpg'
-name = '666'
+# Aliases for "v348" is "2018M", "v463" is "2021E".
+roblox_version = '2018M'
+
+title = 'Lumber Tycoon 2'
 description = ''
 creator.name = 'ÒÓ'
+startup_script = 'game.workspace.FilteringEnabled = true'
+
+[game_setup.place]
+path = 'maps\lt2.rbxl'
+# When game:SavePlace() is called, overwirtes the place at `.place_path`
+enable_saveplace = false
+
+[game_setup.database]
+path = '_.sqlite'
+clear_on_start = false
+
+[game_setup.icon]
+# Stretches to 16:9.
+path = 'c:\Users\USERNAME\Pictures\Byfron Icon.png'
 
 
 [server_core]
-chat_style = 'ClassicAndBubble'
-avatar_type = 'R15'
-
-# Python function `RESULT` which generates an RFD-specific user code if one isn't provided.
-# Server maintainers should review the code because it's used by 'eval'.
 retrieve_default_user_code = '''
-function(tick) -- float -> str:
+function(tick) -- float -> str
     return string.format('Tick %d', tick)
 end
 '''
 
-# Python function `RESULT` which evaluates the player's `Name` value from their RFD-specific user code.
-# Server maintainers should review the code because it's used by 'eval'.
+check_user_allowed = '''
+function(user_code, ip_addr) -- string -> bool
+    print(user_code, 'joined from IP address', ip_addr)
+    return true
+end
+'''
+
+retrieve_avatar_type = '''
+function(user_code) -- str -> str
+    return 'R6'
+end
+'''
+
+retrieve_avatar_items = '''
+function(user_code) -- str -> [str]
+    return {
+    }
+end
+'''
+
+retrieve_avatar_colors = '''
+function(user_code) -- str -> {[str]: number}
+    return {
+        head = 1013,
+        left_arm = 1013,
+        left_leg = 1013,
+        right_arm = 1013,
+        right_leg = 1013,
+        torso = 1013,
+    }
+end
+'''
+
+retrieve_avatar_scales = '''
+function(user_code) -- str -> {[str]: number}
+    return {
+        height = 1,
+        width = 0.8,
+        head = 1,
+        depth = 0.8,
+        proportion = 0,
+        body_type = 0,
+    }
+end
+'''
+
 retrieve_username = '''
-function(user_code) -- str -> str:
+function(user_code) -- str -> str
     return user_code
 end
 '''
 
-# Python function `RESULT` which evaluates the player's `UserId` value from their RFD-specific user code.
-# Server maintainers should review the code because it's used by 'eval'.
 retrieve_user_id = '''
-function(user_code) -- str -> int:
+function(user_code) -- str -> int
     return math.random(1, 16777216)
 end
 '''
 
-# Python function `RESULT` which evaluates the player's `AccountAge` value from their RFD-specific user code.
-# Server maintainers should review the code because it's used by 'eval'.
 retrieve_account_age = '''
 function(user_code) -- str -> int
     return 6969
 end
 '''
 
-# Python function `RESULT` which filters text.
-# Server maintainers should review the code because it's used by 'eval'.
 filter_text = '''
 function(user_code, text)
     return text:gsub('oo','òó'):gsub('OO','ÒÓ'):gsub('ee','èé'):gsub('EE','ÈÉ'):gsub('Roblox','Rōblox'):gsub('ROBLOX','RŌBLOX')
 end
 '''
+
+chat_style = 'ClassicAndBubble'
