--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -9,7 +9,7 @@ instances.count = 1
 
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E".
-roblox_version = '2021'
+roblox_version = '2018'
 
 title = 'òó'
 description = ''
@@ -17,7 +17,7 @@ creator.name = 'ÒÓ'
 startup_script = ''
 
 [game_setup.place]
-path = 'd:\Users\username\Documents\Leaked-Roblox-Places-main\RBXL\BETA___T_C__City_of_Istanbul.rbxl'
+path = 'c:\Users\USERNAME\Documents\Roblox Files\Material.rbxl'
 # When game:SavePlace() is called, overwirtes the place at `.path`
 enable_saveplace = false
 
