--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -9,7 +9,7 @@ instances.count = 1
 
 [game_setup]
 # Aliases for "v348" is "2018M", "v463" is "2021E".
-roblox_version = '2018'
+roblox_version = '2021'
 
 title = 'òó'
 description = ''
@@ -17,7 +17,7 @@ creator.name = 'ÒÓ'
 startup_script = ''
 
 [game_setup.place]
-path = 'c:\Users\USERNAME\Documents\Roblox Files\Material.rbxl'
+path = 'd:\Users\username\Documents\Leaked-Roblox-Places-main\RBXL\Santa_Ana_Airport (1).rbxl'
 # When game:SavePlace() is called, overwirtes the place at `.path`
 enable_saveplace = false
 
@@ -52,11 +52,24 @@ end
 retrieve_avatar_items = '''
 function(user_code) -- str -> [str]
     return {
-        301820642,
-        5243961918,
-        11857928130,
-        86487700,
-        16630147,
+        10726856854,
+        9482991343,
+        9481782649,
+        9120251003,
+        4381817635,
+        6969309778,
+        5731052645,
+        2846257298,
+        121390054,
+        261826995,
+        154386348,
+        201733574,
+        48474294,
+        6340101,
+        192483960,
+        190245296,
+        183808364,
+        34247191,
     }
 end
 '''
@@ -64,12 +77,12 @@ end
 retrieve_avatar_colors = '''
 function(user_code) -- str -> {[str]: number}
     return {
-        head = 1013,
-        left_arm = 1013,
-        left_leg = 1013,
-        right_arm = 1013,
-        right_leg = 1013,
-        torso = 1013,
+        head = 315,
+        left_arm = 315,
+        left_leg = 315,
+        right_arm = 315,
+        right_leg = 315,
+        torso = 315,
     }
 end
 '''
