--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -17,7 +17,7 @@ creator.name = 'ÒÓ'
 startup_script = ''
 
 [game_setup.place]
-path = 'd:\Users\username\Documents\Leaked-Roblox-Places-main\RBXL\Santa_Ana_Airport (1).rbxl'
+path = 'c:\Users\USERNAME\Documents\Roblox Files\Apartments.rbxl'
 # When game:SavePlace() is called, overwirtes the place at `.path`
 enable_saveplace = false
 
