--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -16,7 +16,7 @@ description = ''
 creator.name = 'ÒÓ'
 startup_script = ''
 
-[game_setup.place]
+[game_setup.place_file]
 path = 'c:\Users\USERNAME\Documents\Roblox Files\Apartments.rbxl'
 # When game:SavePlace() is called, overwirtes the place at `.path`
 enable_saveplace = false
