--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -35,6 +35,10 @@ enable_saveplace = false
 sqlite_path = '_.sqlite'
 clear_on_start = false
 
+[game_setup.asset_cache]
+dir_path = './AssetCache'
+clear_on_start = true
+
 [server_core]
 retrieve_default_user_code = '''
 function(tick) -- float -> str
@@ -171,11 +175,15 @@ icon = 0
 
 [[remote_data.asset_redirects]]
 id_val = 13
-cmd_line = 'curl https://archive.org/download/youtube-WmNfDXTnKMw/WmNfDXTnKMw.webm -L --output -'
+cmd_line = '''ffmpeg -i "https://archive.org/download/youtube-DMtOlxH7JQo/DMtOlxH7JQo.mp4" -c:v libvpx -b:v 3000k -speed 16 -c:a libvorbis -b:a 128k -ar 44100 -f webm -'''
 
 [[remote_data.asset_redirects]]
 id_val = 14
 uri = 'https://archive.org/download/youtube-WmNfDXTnKMw/WmNfDXTnKMw.webm'
+
+[[remote_data.asset_redirects]]
+id_val = 15
+cmd_line = 'curl https://archive.org/download/youtube-WmNfDXTnKMw/WmNfDXTnKMw.webm -L --output -'
 
 [server_assignment]
 players.maximum = 4096
